--- a/public/index.html
+++ b/public/index.html
@@ -5,27 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>在线图片加水印，canvas加水印,防止身份证复印件被盗</title>
-  <meta name="keywords" content="图片加水印,在线给图片加水印,在线照片加水印,在线给图片加文字,canvas加水印,canvas图片旋转,防止身份证复印件被盗" />
-  <meta name="description" content="在线给图片加水印，通过前端canvas给你的个人证件加上水印，防止身份证复印件被盗。纯前端加水印，拒绝上传保证个人信息安全！" />
-  <link rel="stylesheet" href="index.css" />
-
-  <script>
-    var _hmt = _hmt || [];
-    (function () {
-      var hm = document.createElement("script");
-      hm.src = "https://hm.baidu.com/hm.js?6aa7d895ff4fe1159c572ae1f12f2ddb";
-      var s = document.getElementsByTagName("script")[0];
-      s.parentNode.insertBefore(hm, s);
-    })();
-  </script>
-
+  <meta name="keywords" content="图片加水印,在线给图片加水印,在线照片加水印,在线给图片加文字,canvas加水印,canvas图片旋转,防止身份证复印件被盗"/>
+  <meta name="description" content="在线给图片加水印，通过前端canvas给你的个人证件加上水印，防止身份证复印件被盗。纯前端加水印，拒绝上传保证个人信息安全！"/>
+  <link rel="stylesheet" href="index.css"/>
 </head>
 
 <body>
 
-  <div id="root"></div>
-  <script src="index.js"></script>
+<div id="root"></div>
+<script src="index.js"></script>
 
+<div style="display:none">
+  <script type="text/javascript" src="https://s95.cnzz.com/z_stat.php?id=1260545070&web_id=1260545070"></script>
+</div>
 </body>
 
 </html>
